compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__generic__typech_generic_type_method_instance_call_param.snap
---
source: compiler/lume_typech/src/tests/check/generic.rs
description: "struct A<T> {}\n\n        impl<T> A<T> {\n            pub fn bar(self, val:  T) { }\n        }\n\n        fn bar() {\n            let a: A<Boolean> = A<Boolean> { };\n\n            a.bar(false);\n        }"
---

