compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__generic__typech_generic_type_method_instance_return.snap
---
source: compiler/lume_typech/src/tests/check/generic.rs
description: "struct A<T> {}\n\n        impl<T> A<T> {\n            pub fn bar(self, val:  T) -> T {\n                return val;\n            }\n        }"
---

