compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__generic__typech_generic_type_method_static_call_param.snap
---
source: compiler/lume_typech/src/tests/check/generic.rs
description: "struct A<T> {}\n\n        impl<T> A<T> {\n            pub fn bar(val:  T) { }\n        }\n\n        fn bar() {\n            A<Boolean>::bar(false);\n        }"
---

