compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__generic__typech_generic_type_method_static_call_returned_type_incomp.snap
---
source: compiler/lume_typech/src/tests/check/generic.rs
description: "struct A<T> {}\n\n        impl<T> A<T> {\n            pub fn bar(val: T) -> T {\n                return val;\n            }\n        }\n\n        fn bar() {\n            let _: Int32 = A<Boolean>::bar(false);\n        }"
---
× error[LM4001]: mismatched types
    ╭───────────
 9  │         fn bar() {
 10 │             let _: Int32 = A<Boolean>::bar(false);
    │                                        ^^^ expected type Int32, but found type Boolean...
 11 │         }
    ∶ 
 9  │         fn bar() {
 10 │             let _: Int32 = A<Boolean>::bar(false);
    │                    ^^^^^ ...because of type defined here
 11 │         }
    ╰──
   help: expected type Int32
            found type Boolean
